ajout d'un SoundManger, plus pratique pour les sons + ajout boutton pour couper le son dans les paramètres + animation gameOver pas fou mais suffisant