@@ -3,16 +3,17 @@ package view;
 import javax.swing.JButton;
 import javax.swing.JComboBox;
 import javax.swing.JLabel;
-import java.awt.Dimension;
+import java.awt.*;
 import javax.swing.JLayeredPane;
-import java.awt.event.ActionListener;
-import java.awt.Image;
 import javax.swing.JPanel;
 import model.LeaderBoard;
-import java.awt.CardLayout;
+
 import javax.swing.ImageIcon;
 import java.util.Arrays;
+import java.util.Objects;
+
 import util.SettingsParser;
+import util.SoundManager;
 import view.main.App;
 import view.ui.UIFactory;
 
@@ -22,38 +23,38 @@ import view.ui.UIFactory;
  */
 public class SettingsPanel extends JLayeredPane {
     private JComboBox<String> windowSize = new JComboBox<>();
-    private JLabel backGroundLabel = new JLabel();
-    private String[] WindowSizes = { "1200x560", "1350x630", "1500x700", "1650x770", "1800x840" };
+    private final JLabel backGroundLabel = new JLabel();
+    private boolean isSoundOn = true; // État initial du son
 
     /**
      * Constructor for the SettingsPanel class.
      * Initializes the spinner.
      */
-    @SuppressWarnings({ "removal" })
     public SettingsPanel(CardLayout switcher) {
         loadBackgroundImage();
-        add(backGroundLabel, new Integer(0));
+        add(backGroundLabel, Integer.valueOf(0));
         int userWindowWidth = SettingsParser.getResolutionWidth();
         int userWindowHeight = SettingsParser.getResolutionHeight();
         backGroundLabel.setBounds(0, 0, userWindowWidth, userWindowHeight);
         // Handle the case where the user has a custom window size which is not in the
         // array we add it to the array
         String userWindowSize = userWindowWidth + "x" + userWindowHeight;
-        if (!Arrays.asList(WindowSizes).contains(userWindowSize)) {
-            String[] newWindowSizes = new String[WindowSizes.length + 1];
-            System.arraycopy(WindowSizes, 0, newWindowSizes, 0, WindowSizes.length);
-            newWindowSizes[WindowSizes.length] = userWindowSize;
-            WindowSizes = newWindowSizes;
+        String[] windowSizes = {"1200x560", "1350x630", "1500x700", "1650x770", "1800x840"};
+        if (!Arrays.asList(windowSizes).contains(userWindowSize)) {
+            String[] newWindowSizes = new String[windowSizes.length + 1];
+            System.arraycopy(windowSizes, 0, newWindowSizes, 0, windowSizes.length);
+            newWindowSizes[windowSizes.length] = userWindowSize;
+            windowSizes = newWindowSizes;
         }
         JPanel leaderBoardPanel = new JPanel();
         // It will have an arrow to display each leaderboard category
         leaderBoardPanel.setLayout(null);
         leaderBoardPanel.setBounds(0, 0, userWindowWidth, userWindowHeight);
-        windowSize = new JComboBox<>(WindowSizes);
+        windowSize = new JComboBox<>(windowSizes);
         windowSize.setBounds(50, 100, 200, 30);
         windowSize.setSelectedItem(userWindowSize);
         windowSize.addActionListener(e -> {
-            String[] size = windowSize.getSelectedItem().toString().split("x");
+            String[] size = Objects.requireNonNull(windowSize.getSelectedItem()).toString().split("x");
             SettingsParser.changeResolution(Integer.parseInt(size[0]), Integer.parseInt(size[1]));
             App.getInstance().getScreen()
                     .setPreferredSize(new Dimension(Integer.parseInt(size[0]), Integer.parseInt(size[1])));
@@ -66,28 +67,21 @@ public class SettingsPanel extends JLayeredPane {
         windowSizeLabel.setForeground(java.awt.Color.WHITE);
         windowSizeLabel.setBounds(50, 50, 200, 30);
         JButton leaderBoardResetButton = UIFactory.createStyledButton("Réinitialiser les scores",
-                new ActionListener() {
-                    @Override
-                    public void actionPerformed(java.awt.event.ActionEvent e) {
-                        LeaderBoard leaderBoard = new LeaderBoard();
-                        leaderBoard.resetLeaderBoard();
-                    }
+                e -> {
+                    LeaderBoard leaderBoard = new LeaderBoard();
+                    leaderBoard.resetLeaderBoard();
                 });
         leaderBoardResetButton.setBounds(50, 200, 300, 30);
-        JButton backButton = UIFactory.createStyledButton("Retour", new ActionListener() {
-            @Override
-            public void actionPerformed(java.awt.event.ActionEvent e) {
-                switcher.show(getParent(), "choicePanel");
-            }
-        });
+        JButton backButton = UIFactory.createStyledButton("Retour", e -> switcher.show(getParent(), "choicePanel"));
         backButton.setBounds(50, 250, 300, 30);
-        backButton.addActionListener(e -> {
-            switcher.show(getParent(), "choicePanel");
-        });
-        add(windowSizeLabel, new Integer(1));
-        add(windowSize, new Integer(1));
-        add(leaderBoardResetButton, new Integer(1));
-        add(backButton, new Integer(1));
+        backButton.addActionListener(e -> switcher.show(getParent(), "choicePanel"));
+        JButton soundToggleButton = UIFactory.createStyledButton("Activer/Désactiver le son", e -> toggleSound());
+        soundToggleButton.setBounds(50, 150, 300, 30);
+        add(soundToggleButton, Integer.valueOf(1));
+        add(windowSizeLabel, Integer.valueOf(1));
+        add(windowSize, Integer.valueOf(1));
+        add(leaderBoardResetButton, Integer.valueOf(1));
+        add(backButton, Integer.valueOf(1));
     }
 
     /**
@@ -95,7 +89,7 @@ public class SettingsPanel extends JLayeredPane {
      */
     private void loadBackgroundImage() {
         try {
-            ImageIcon imageIcon = new ImageIcon(getClass().getResource("/menu/settingsbg.gif"));
+            ImageIcon imageIcon = new ImageIcon(Objects.requireNonNull(getClass().getResource("/menu/settingsbg.gif")));
             Image image = imageIcon.getImage();
             Dimension screenSize = App.getInstance().getScreen().getPreferredSize();
             Image scaledImage = image.getScaledInstance(screenSize.width, screenSize.height, Image.SCALE_DEFAULT);
@@ -104,5 +98,40 @@ public class SettingsPanel extends JLayeredPane {
         } catch (Exception e) {
             e.printStackTrace();
         }
+    }
+
+    /**
+     * Updates the appearance of the sound button based on the sound state.
+     */
+    private void updateSoundButtonAppearance() {
+        String buttonText = isSoundOn ? "Désactiver le son" : "Activer le son";
+
+        Component[] components = getComponents();
+        for (Component component : components) {
+            if (component instanceof JButton button) {
+                // Mettez à jour le texte du bouton
+                if (button.getText().equals("Activer/Désactiver le son") || button.getText().equals("Activer le son") || button.getText().equals("Désactiver le son")){
+                    button.setText(buttonText);
+                    break;
+                }
+            }
+        }
+    }
+
+    /**
+     * Toggles the sound on and off.
+     */
+    private void toggleSound() {
+        isSoundOn = !isSoundOn;
+        if (isSoundOn) {
+            SoundManager.isEnable = true;
+            SoundManager.loopSound("menu");
+
+        } else {
+            SoundManager.stopAllSounds();
+            SoundManager.isEnable = false;
+        }
+        // Mettez à jour l'apparence du bouton en fonction de l'état du son
+        updateSoundButtonAppearance();
     }
 }
